--- a/airplane/index.html
+++ b/airplane/index.html
@@ -39,7 +39,7 @@
                          <div class="gameBtn">
                             <span class="contine" id="contine">继续</span>
                             <span class="reStart" id="reStart">重新开始</span>
-                            <span>大学生来了</span>
+                            <a href="http://hhd.wxmmd.com/index.php?g=Wap&m=Index&a=lists&classid=4479&token=ongmwk1459747876&wecha_id=0">大学生来了</a>
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                          <div class="gameBtn" id="gameBtn">
                             <span id="reStartGame" onclick="jixu()">再来一次</span>
                              <span id="zmBtn">特赞队招募</span>
-                            <a href="http://cms.wxmmd.com/index.php?g=Wap&m=Index&a=lists&classid=3825&token=wtgokb1458287605&diymenu=1">报名通道</a>
+                            <a href="http://hhd.wxmmd.com/index.php?g=Wap&m=Index&a=lists&classid=4479&token=ongmwk1459747876&wecha_id=0">报名通道</a>
                         </div>
                     </div>
                 </div>
