--- a/airplane/index.html
+++ b/airplane/index.html
@@ -12,7 +12,7 @@
 </script>
 <link rel="stylesheet" type="text/css" href="css/main.css"/>
 <body>
-<div style="width:27rem;margin: auto;height:100%;">
+<div style="width:27rem;margin:0 auto;height:100%;">
     <div class="mainCon">
         <div class="loading" >
             <div class="loadArea">
