--- a/airplane/index.html
+++ b/airplane/index.html
@@ -12,7 +12,7 @@
 </script>
 <link rel="stylesheet" type="text/css" href="css/main.css"/>
 <body>
-<div style="width:27rem;margin:0 auto;height:100%;">
+<div style="width:27rem;margin: auto;height:100%;">
     <div class="mainCon">
         <div class="loading" >
             <div class="loadArea">
@@ -23,9 +23,9 @@
         </div>
         <div id="contentdiv">
             <div id="startdiv">
-                <div class="djdz"><img src="image/djdz_bg.png"/></div>
+                <div class="djdz"><img src="http://zhenimg.com/marketpic/appimg/2015brand/djdz_bg.png"/></div>
                 <div class="gameStart">
-                    <img src="image/fj_bg.jpg"/>
+                    <img src="http://zhenimg.com/marketpic/appimg/2015brand/fj_bg.jpg"/>
                     <div class="gameBtn">
                         <span onclick="begin();">开始游戏</span>
                         <span id="studentCome">大学生来了</span>
@@ -35,7 +35,7 @@
             <div class="hbBg" id="hbBg"></div>
                 <div class="ztArea" id="ztArea">
                     <div class="ztCon">
-                        <img src="image/ztLogo.png"/>
+                        <img src="http://zhenimg.com/marketpic/appimg/2015brand/ztLogo.png"/>
                          <div class="gameBtn">
                             <span class="contine" id="contine">继续</span>
                             <span class="reStart" id="reStart">重新开始</span>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="ztArea" id="endGame">
                     <div class="ztCon">
-                        <img src="image/ztLogo.png"/>
+                        <img src="http://zhenimg.com/marketpic/appimg/2015brand/ztLogo.png"/>
                         <div class="planscore" id="planscore">0</div>
                          <div class="gameBtn" id="gameBtn">
                             <span id="reStartGame" onclick="jixu()">再来一次</span>
@@ -70,14 +70,14 @@
                     <div class="ztBtn"></div>
                     <label id="label">0</label>
                     <div class="fjMs">
-                        <img src="image/ms_fj.png"/>
+                        <img src="http://zhenimg.com/marketpic/appimg/2015brand/ms_fj.png"/>
                         <span class="msIcon">X</span>
                         <span id="haveChance">1</span>
                     </div>
                 </div>
                 <div class="audio" id="audio">
                 	<span class="audioKey"></span>
-                	<audio loop="" src="image/game_music.mp3" preload style="display:none;"></audio>
+                	<audio loop="" src="http://zhenimg.com/marketpic/appimg/2015brand/game_music.mp3" preload style="display:none;"></audio>
                 </div>
                 <div id="suspenddiv"></div>
             </div>
