--- a/airplane/index.html
+++ b/airplane/index.html
@@ -28,7 +28,7 @@
                     <img src="http://zhenimg.com/marketpic/appimg/2015brand/fj_bg.jpg"/>
                     <div class="gameBtn">
                         <span onclick="begin();">开始游戏</span>
-                        <span id="studentCome">大学生来了</span>
+                        <span id="studentCome">哇！大学生来了</span>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                          <div class="gameBtn">
                             <span class="contine" id="contine">继续</span>
                             <span class="reStart" id="reStart">重新开始</span>
-                            <a href="http://hhd.wxmmd.com/index.php?g=Wap&m=Index&a=lists&classid=4479&token=ongmwk1459747876&wecha_id=0">大学生来了</a>
+                            <a href="http://hhd.wxmmd.com/index.php?g=Wap&m=Index&a=lists&classid=4479&token=ongmwk1459747876&wecha_id=0">哇！大学生来了</a>
                         </div>
                     </div>
                 </div>
@@ -56,16 +56,13 @@
                 </div>
             <div id="oDiv" class="oDiv"></div>
             <div class="oDiv2"></div>
-            <div class="oDiv3"></div>
             <div class="oDiv4"><a class="bmtdBtn">返回游戏</a></div>
             <div class="oDiv1">
             <div id="maindiv" class="maindiv">
                 <div id="buji" class="buji1"></div>
                 <div id="buji1" class="buji1"></div>
                 <div id="buji2" class="buji1"></div>
-                <div id="buji3">
-                        <span class="buji1"></span>
-                </div>
+                <div id="buji3"  class="buji1"></div>
                 <div id="scorediv">
                     <div class="ztBtn"></div>
                     <label id="label">0</label>
@@ -76,8 +73,8 @@
                     </div>
                 </div>
                 <div class="audio" id="audio">
-                	<span class="audioKey"></span>
-                	<audio loop="" src="http://zhenimg.com/marketpic/appimg/2015brand/game_music.mp3" preload style="display:none;"></audio>
+                    <span class="audioKey"></span>
+                    <audio loop="" src="http://zhenimg.com/marketpic/appimg/2015brand/game_music.mp3" preload style="display:none;"></audio>
                 </div>
                 <div id="suspenddiv"></div>
             </div>
@@ -85,6 +82,18 @@
         </div>
     </div>
 </div>
+<!-- 初始化图片，提前加载 -->
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/bullet1.png" style="display:none;" class="zd1"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/bullet2.png" style="display:none;" class="zd2"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/bf_fjbz.gif" style="display:none;" class="bz1"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/small_fjbz.gif" style="display:none;" class="bz2"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/middle_fjbz.gif" style="display:none;" class="bz3"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/big_fjbz.gif" style="display:none;" class="bz4"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/enemy1_fly_1.png" style="display:none;" class="bz5"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/enemy2_fly_1.png" style="display:none;" class="bz6"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/enemy3_fly_1.png" style="display:none;" class="bz7"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/my_feiji.png" style="display:none;" class="bz8"/>
+<img src="http://zhenimg.com/marketpic/appimg/2015brand/buji_fj.gif" style="display:none;" class="bz9"/>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
